--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,14 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="../static/img/favicon.ico">
 
     <title>Salt API Client</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="../static/css/custom.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img src="img/Salt-cutout.png" width="150" height="70" alt="">
+                <img src="../static/img/Salt-cutout.png" width="150" height="70" alt="">
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
@@ -122,7 +122,7 @@
                 </div>
             </div>
 
-            <div id="animModal" class="modal fade animmodal"><p><img src="img/ajax-loader.gif">Please Wait</p></div>
+            <div id="animModal" class="modal fade animmodal"><p><img src="../static/img/ajax-loader.gif">Please Wait</p></div>
 
 
 
@@ -139,8 +139,8 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+<script src="../static/js/bootstrap.min.js"></script>
+<script src="../static/js/main.js"></script>
 
 </body>
 </html>
