small visual changes

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,8 @@
 
     <div class="starter-template">
         <h1>Namak - The Web Version!</h1>
-        <p class="lead">Use this page as a way to quickly test out the Salt API.<br></p>
+        <h4>A Simple frontend to the Salt-API</h4>
+        <hr>
         <form>
             <div class="form-group">
                 <label for="test">Click to Test the Basic unauthenticated Get</label><br>
@@ -61,7 +62,7 @@
         <hr>
         <div class="row">
             <div class="col-sm-8 col-centered">
-                <p>Use the form below to send an authenticated function query to the Salt-api</p>
+                <label>Use the form below to send an authenticated function query to the Salt-api</label><br>
                 <form class="form-inline">
                     <div class="form-group">
                         <label for="username">Username</label>
@@ -79,6 +80,7 @@
                         </select>
                     </div>
                 </form>
+                <br><br>
                 <form>
                     <div class="form-group">
                         <label for="expr_form">Main Target</label>
