added new logo and tiny changes in app

--- a/app/index.html
+++ b/app/index.html
@@ -22,9 +22,7 @@
     <![endif]-->
 
 </head>
-
 <body>
-
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -35,7 +33,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img src="../static/img/Salt-cutout.png" width="150" height="70" alt="">
+                <img src="../static/img/namak-logo.png" width="150" height="70" alt="">
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
@@ -48,7 +46,6 @@
 </nav>
 
 <div class="container">
-
     <div class="starter-template">
         <h1>Namak - The Web Version!</h1>
         <h4>A Simple frontend to the Salt-API</h4>
@@ -105,7 +102,6 @@
                     <button id="test2" type="submit" class="btn btn-default">Send Request</button>
                     <button id="reset" type="reset" class="btn btn-default">Reset Form</button>
                 </form>
-
             </div>
             <div id="myModal" class="modal fade">
                 <div class="modal-dialog">
@@ -123,19 +119,10 @@
                     </div>
                 </div>
             </div>
-
             <div id="animModal" class="modal fade animmodal"><p><img src="../static/img/ajax-loader.gif">Please Wait</p></div>
-
-
-
-
         </div>
-
-
     </div>
-
 </div><!-- /.container -->
-
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
