--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
                 <br><br>
                 <form>
                     <div class="form-group">
-                        <label for="expr_form">Main Target</label>
+                        <label for="expr_form">Target Type</label>
                         <select class="form-control" id="expr_form">
                             <option>minion</option>
                             <option>grain</option>
@@ -88,7 +88,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="tgt">Sub Target</label>
+                        <label for="tgt">Target</label>
                         <input type="text" class="form-control" id="tgt" placeholder="e.g. master or *site-prod*">
                     </div>
                     <div class="form-group">
